tests/output_contracts/snapshots/output_contracts__json_output__graph_all_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&json)
---
{
  "components": [
    {
      "nodes": [
        {
          "id": "ISSUE_ID",
          "title": "Graph root A",
          "status": "open",
          "priority": 2,
          "depth": 0
        },
        {
          "id": "ISSUE_ID",
          "title": "Graph child of A",
          "status": "open",
          "priority": 2,
          "depth": 1
        }
      ],
      "edges": [
        [
          "ISSUE_ID",
          "ISSUE_ID"
        ]
      ],
      "roots": [
        "ISSUE_ID"
      ]
    },
    {
      "nodes": [
        {
          "id": "ISSUE_ID",
          "title": "Graph root B",
          "status": "open",
          "priority": 2,
          "depth": 0
        }
      ],
      "edges": [],
      "roots": [
        "ISSUE_ID"
      ]
    }
  ],
  "total_nodes": 3,
  "total_components": 2
}
