tests/output_contracts/snapshots/output_contracts__json_output__graph_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&json)
---
{
  "root": "ISSUE_ID",
  "nodes": [
    {
      "id": "ISSUE_ID",
      "title": "Graph root",
      "status": "open",
      "priority": 2,
      "depth": 0
    },
    {
      "id": "ISSUE_ID",
      "title": "Graph child",
      "status": "open",
      "priority": 2,
      "depth": 1
    }
  ],
  "edges": [
    [
      "ISSUE_ID",
      "ISSUE_ID"
    ]
  ],
  "count": 2
}
