tests/output_contracts/snapshots/output_contracts__json_output__info_error_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: json
---
{
  "error": "no beads directory found"
}
