tests/output_contracts/snapshots/output_contracts__json_output__info_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_info_json(&json)
---
{
  "config": {
    "issue_prefix": "bd"
  },
  "database_path": "/WORKSPACE/.beads/beads.db",
  "issue_count": "N",
  "mode": "direct"
}
