tests/output_contracts/snapshots/output_contracts__json_output__info_schema_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_info_json(&json)
---
{
  "config": {
    "issue_prefix": "bd"
  },
  "database_path": "/WORKSPACE/.beads/beads.db",
  "issue_count": "N",
  "mode": "direct",
  "schema": {
    "tables": [
      "blocked_issues_cache",
      "child_counters",
      "comments",
      "config",
      "dependencies",
      "dirty_issues",
      "events",
      "export_hashes",
      "issues",
      "labels",
      "metadata"
    ]
  }
}
