tests/output_contracts/snapshots/output_contracts__json_output__label_list_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&list_json)
---
[
  "backend"
]
