tests/output_contracts/snapshots/output_contracts__json_output__list_json_output.snap
---
source: tests/output_contracts/json_output.rs
assertion_line: 56
expression: normalize_json(&json)
---
{
  "issues": [
    {
      "id": "ISSUE_ID",
      "title": "Issue two",
      "status": "open",
      "priority": 2,
      "issue_type": "task",
      "created_at": "TIMESTAMP",
      "created_by": "ACTOR",
      "updated_at": "TIMESTAMP",
      "source_repo": "SOURCE_REPO",
      "dependency_count": 0,
      "dependent_count": 0
    },
    {
      "id": "ISSUE_ID",
      "title": "Issue one",
      "status": "open",
      "priority": 2,
      "issue_type": "task",
      "created_at": "TIMESTAMP",
      "created_by": "ACTOR",
      "updated_at": "TIMESTAMP",
      "source_repo": "SOURCE_REPO",
      "dependency_count": 0,
      "dependent_count": 0
    }
  ],
  "total": 2,
  "limit": 0,
  "offset": 0,
  "has_more": false
}
